--- a/LearningWPF/View/RecipeView.xaml
+++ b/LearningWPF/View/RecipeView.xaml
@@ -33,26 +33,39 @@
                 <Label Content="{Binding SelectedRecipe.NameRecipe}"
                    HorizontalAlignment="Center" VerticalAlignment="Center"
                    FontSize="20" FontFamily="Arial"
-                   Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}" FontWeight="Bold"/>
-                <Grid Grid.Row="1" Background="White" >
-                    <Image Grid.Row="1"  Source="{Binding SelectedRecipe.ImagePath,
+                   Visibility="{Binding IsDisplayMode, 
+Converter={StaticResource IsEditConverter}}" FontWeight="Bold"/>
+                    <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
+                        <!--<Grid HorizontalAlignment="Left">
+                            <Button HorizontalAlignment="Center" Width="30" Height="30">
+                                
+                            </Button>
+                        </Grid>-->
+                        <Grid Background="White" HorizontalAlignment="Center" Margin="8">
+                            <Image Grid.Row="1"  Source="{Binding SelectedRecipe.ImagePath,
                             FallbackValue={StaticResource DefaultContactImage},
                             TargetNullValue={StaticResource DefaultContactImage}}"
                 Visibility="{Binding IsDisplayMode, Converter={StaticResource IsEditConverter}}" 
                        Width="550" Height="399" HorizontalAlignment="Center" VerticalAlignment="Center"      
                        />
-                    <Button Style="{DynamicResource AddImageButton}" Width="550px"
+                            <Button Style="{DynamicResource AddImageButton}" Width="550px"
                         Command="{Binding AddImageCommand}"
                         Visibility="{Binding IsEditMode, Converter={StaticResource IsEditConverter}}" 
                         Background="{x:Null}" BorderBrush="Transparent" Cursor="Hand"
                         HorizontalAlignment="Center" VerticalAlignment="Center" >
-                        <Image Grid.Row="1" Source="{Binding SelectedRecipe.ImagePath,
+                                <Image Grid.Row="1" Source="{Binding SelectedRecipe.ImagePath,
                             FallbackValue={StaticResource DefaultContactImage},
                             TargetNullValue={StaticResource DefaultContactImage}}" 
                            HorizontalAlignment="Center" VerticalAlignment="Center" 
                            Width="550" Height="400"/>
-                    </Button>
-                </Grid>
+                            </Button>
+                        </Grid>
+                        <!--<Grid HorizontalAlignment="Right">
+                            <Button HorizontalAlignment="Center" Width="30" Height="30">
+                                
+                            </Button> 
+                        </Grid>-->
+                    </StackPanel>
                 <Grid Grid.Row="2">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="0.6*"/>
